force-app/main/default/objects/ssot__CustodyItemRegulatoryCodeViolation__dlm/fields/ssot__CustodyItemRgltyCodeVioStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__CustodyItemRgltyCodeVioStatus__c</fullName>
    <label>Custody Item Rglty Code Vio Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CustodyItemRgltyCodeVioStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>