force-app/main/default/objects/ssot__CustodyItemRegulatoryCodeViolation__dlm/fields/ssot__RegulatoryCodeViolationId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RegulatoryCodeViolationId__c</fullName>
    <label>Regulatory Code Violation</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RegulatoryCodeViolationId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>