force-app/main/default/objects/ssot__CustodyItemRegulatoryCodeViolation__dlm/fields/ssot__rel_1731658759311_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731658759311_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CustodyItemRegulatoryCodeViolation_C_rel</label>
    <referenceTo>ssot__CustodyItem__dlm</referenceTo>
    <relationshipLabel>CustodyItemRegulatoryCodeViolation_C_rel</relationshipLabel>
    <relationshipName>rel_1731658759311_end</relationshipName>
    <type>Lookup</type>
</CustomField>