force-app/main/default/objects/ssot__CustodyItemRegulatoryCodeViolation__dlm/fields/ssot__rel_1731659291318_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731659291318_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CustodyItemRegulatoryCodeViolation_R_rel</label>
    <referenceTo>ssot__RegulatoryCodeViolation__dlm</referenceTo>
    <relationshipLabel>CustodyItemRegulatoryCodeViolation_R_rel</relationshipLabel>
    <relationshipName>rel_1731659291318_end</relationshipName>
    <type>Lookup</type>
</CustomField>